--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash.sortby": "^4.2.0",
     "lodash.sortbyorder": "^3.4.4",
     "lodash.startswith": "^4.0.0",
+    "lodash.trim": "^4.2.0",
     "lodash.uniq": "^4.2.0",
     "lodash.values": "^4.1.0"
   },
